Add metadata for crates.io.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,12 @@
 [package]
 
-name = "number-words-rust"
+name = "number-words"
 version = "0.0.1"
 authors = ["Franklin Chen <franklinchen@franklinchen.com>"]
+description = "Code for FizzBuzz talk"
+documentation = "http://rust-ci.org/FranklinChen/number-words-rust/doc/number-words"
+homepage = "https://github.com/FranklinChen/number-words-rust"
+repository = "https://github.com/FranklinChen/number-words-rust"
+readme = "README.md"
+keywords = ["game", "parsing"]
+license = "MIT"
