Fix crate name from "number-words" to "number_words".

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,14 @@
 language: rust
+env:
+  global:
+    - secure: wWQxaMfBiC8uYhCTGv+aS+wXY9RQag6H71D2oMocrRX1af0/RjFPS2hC0OF9xp/9/u5v1wVatWnRFCfR9YtHxCRd2Cn5n7+/NS1SBai95brJSzowdmThGL34UWO6sJ9oDtnYxNF+UlOSWhZtbiCjt67czCy97BIYluaxOQKWgXM=
+script:
+  - cargo build --verbose
+  - cargo test --verbose
+  - cargo doc --verbose
+  - cp -R target/doc doc
+after_script:
+  - curl http://www.rust-ci.org/artifacts/put?t=$RUSTCI_TOKEN | sh
 notifications:
   email:
     recipients:
