--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 
-name = "number_words"
-version = "0.0.2"
+name = "number-words"
+version = "0.0.3"
 authors = ["Franklin Chen <franklinchen@franklinchen.com>"]
-description = "Code for FizzBuzz talk"
+description = "Parse a number into possible words"
 documentation = "http://rust-ci.org/FranklinChen/number-words-rust/doc/number_words/"
 homepage = "https://github.com/FranklinChen/number-words-rust"
 repository = "https://github.com/FranklinChen/number-words-rust"
