feat: add advanced parsing algorithms and comprehensive benchmarking
- Implement three distinct parsing strategies: NaiveParser (functional with VecDeque), DfsParser (depth-first search with mutable buffer), and MemoizedParser (dynamic programming with precomputed graph)
- Add robust error handling using thiserror for invalid character detection
- Introduce comprehensive test suite covering edge cases and invalid inputs across all parser implementations
- Set up divan-based benchmarking framework with parameterized tests comparing performance characteristics
- Migrate CI from Travis to GitHub Actions with complete build, test, and documentation pipeline
- Update project to Rust 2024 edition with modern dependency management
- Provide detailed technical documentation including usage examples, performance analysis, and implementation comparisons
- Replace legacy Parser with unified NumberParser trait allowing interchangeable use of different strategies

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "number_words"
-version = "0.0.4"
+version = "0.0.5"
 authors = ["Franklin Chen <franklinchen@franklinchen.com>"]
 description = "Parse a number into possible words"
 documentation = "http://rust-ci.org/FranklinChen/number-words-rust/doc/number_words/"
@@ -10,3 +10,14 @@ repository = "https://github.com/FranklinChen/number-words-rust"
 readme = "README.md"
 keywords = ["game", "parsing"]
 license = "MIT OR Apache-2.0"
+edition = "2024"
+
+[dev-dependencies]
+divan = "0.1.21"
+
+[[bench]]
+name = "benchmark"
+harness = false
+
+[dependencies]
+thiserror = "2.0.17"
