docs: update documentation links and badges
- Replace outdated documentation URL in Cargo.toml with current docs.rs link
- Update README badges to use modern shields.io format for crates.io and docs.rs
- Add branch parameter to CI badge for clearer status tracking
- Modernize badge styling to match current ecosystem standards

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ name = "number_words"
 version = "0.0.5"
 authors = ["Franklin Chen <franklinchen@franklinchen.com>"]
 description = "Parse a number into possible words"
-documentation = "http://rust-ci.org/FranklinChen/number-words-rust/doc/number_words/"
+documentation = "https://docs.rs/number_words/"
 homepage = "https://github.com/FranklinChen/number-words-rust"
 repository = "https://github.com/FranklinChen/number-words-rust"
 readme = "README.md"
